--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
         <nav>
             <div class="nav">
+                <div class="nav-left">
             <div class="name"> <a href="index.html"> News <i>Hub</i> </a></div>
             <div class="options">
                 <h4><a href="#contents">All News </a></h4>
-            </div>
+            </div></div>
             <div class="search">
                 <input type="text" placeholder="Enter Your Query" id="search-input">
                 <button id="search-btn"> <a href="#contents">Search</a></button>
